<resources>
    <string name="app_name">NumberGuess</string>
    <string name="check">Check</string>
    <string name="bingo">BINGO!!</string>
    <string name="guess_bigger">Guess bigger</string>
    <string name="guess_smaller">Guess smaller</string>
    <string name="dialog_title">Result message</string>
    <string name="ok">OK</string>
    <string name="please_input_a_valid_number">Please input a valid number: 1~10</string>
    <string name="please_input_a_number">Please input a number 1~10:</string>
    <string name="title_activity_material">NumberGuess</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="guess_counter">Guess counter:</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="replay_confirm">Replay confirm</string>
    <string name="are_you_sure_to_replay">Are you sure to replay?</string>
    <string name="excellent_result">\"Excellent! The number is \"</string>
</resources>